--- a/team1/chessGame/frontend/assets/css/pieces.css
+++ b/team1/chessGame/frontend/assets/css/pieces.css
@@ -4,3 +4,8 @@
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
   }
+
+  .pieces {
+    position: absolute;
+    font-size: 4.5rem;
+  }
