--- a/team1/chessGame/frontend/assets/css/main.css
+++ b/team1/chessGame/frontend/assets/css/main.css
@@ -21,6 +21,50 @@ ol, ul {
 
 .header {
     min-height: 3.75rem;
+    background: linear-gradient(to right, #31302d, #3d3d38);
+    position: fixed;
+    display: flex;
+    z-index: 10;
+    width: 100%;
+    justify-content: space-between
+}
+
+.header__logo-chess-game {
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0;
+    font-size: 3rem;
+    color: #f3e2b0;
+}
+
+.header__nav {
+    display: flex;
+    align-items: center;
+    margin-right: 2rem;
+    width: 20rem;
+    justify-content: space-around
+}
+
+.header__nav > .accounts {
+    padding: 0.6rem 1.4rem;
+    text-decoration: none;
+    color: #b3b6ac;
+    font-size: 1.5rem;
+    border-radius: 0.9rem;
+    white-space: nowrap;
+    background-color: inherit;
+}
+
+.header__nav > .accounts:hover {
+    background-color: #56574b;
+    opacity: 60%;
+}
+
+.header__nav > .bars {
+    font-size: 1.8rem;
+    color: #b3b6ac;
+    cursor: pointer;
 }
 
 .content {
@@ -30,10 +74,12 @@ ol, ul {
     place-items: center;
     font-size: 1rem;
     grid-template-columns: repeat(8, 1fr) repeat(4, minmax(0, 1fr));
+    padding: 2rem 0;
+    padding-top: 6rem;
 }   
 
 .footer {
-    min-height: 5rem;
+    min-height: 100rem;
 }
 
 .footer__create {
