--- a/chessGame/client/styles/board.css
+++ b/chessGame/client/styles/board.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(0%, 25%);
+    transform: translate(0%, 10%);
 }
 
 .chessboard {
@@ -33,13 +33,23 @@ body {
     background-color: #B7C0D8;
 }
 
-.textWhite {
+.numWhite {
     color: #E8EDF9;  
     /* padding-top: 0px; */
     transform: translate(-280%, -120%);
 }
 
-.textBlack {
+.numBlack {
     color: #B7C0D8;
     transform: translate(-280%, -120%);
+}
+
+.textWhite {
+    color: #E8EDF9;  
+    transform: translate(200%, 120%);
+}
+
+.textBlack {
+    color: #B7C0D8;
+    transform: translate(200%, 120%);
 }
