--- a/team1/chessGame/frontend/assets/css/main.css
+++ b/team1/chessGame/frontend/assets/css/main.css
@@ -76,7 +76,7 @@ ol, ul {
     padding: 2rem 0;
     padding-top: 6rem;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-around;
 }   
 
