--- a/MinhThanh/chessGame/client/style.css
+++ b/MinhThanh/chessGame/client/style.css
@@ -38,6 +38,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+    user-select: none;
 }
 h1{
     margin: 20px;
