--- a/chessGame/client/styles/board.css
+++ b/chessGame/client/styles/board.css
@@ -8,18 +8,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(0%, 25%);
+    transform: translate(0%, 10%);
 }
 
 .chessboard {
     display: grid;
     grid-template-columns: repeat(8, 68.5px);
-    grid-template-rows: repeat(8, 68.5px);
+    grid-template-rows: repeat(8, 72px);
 }
 
 .square {
     width: 68.5px;
-    height: 68.5px;
+    height: 72px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,13 +33,23 @@ body {
     background-color: #B7C0D8;
 }
 
-.textWhite {
+/* .numWhite {
     color: #E8EDF9;  
     /* padding-top: 0px; */
     transform: translate(-280%, -120%);
-}
+} */
 
-.textBlack {
+/* .numBlack {
     color: #B7C0D8;
     transform: translate(-280%, -120%);
-}
+} */
+
+/* .textWhite {
+    color: #E8EDF9;  
+    transform: translate(200%, 120%);
+} */
+
+/* .textBlack {
+    color: #B7C0D8;
+    transform: translate(200%, 120%);
+} */
