--- a/chessGame/client/styles/global.css
+++ b/chessGame/client/styles/global.css
@@ -17,7 +17,7 @@ body {
     --primary-button: #7b61ff;
     --primary-button-hover: #45339e;
     --primary-button-active: #584b9b;
-    --hightlight-square: #7b61ff;
+    --highlight-square: #7b61ff;
     --black: #000;
     --white: #fff;
     --text-color: #344542;
