fix start game UI

--- a/chessGame/client/styles/startGame.css
+++ b/chessGame/client/styles/startGame.css
@@ -45,6 +45,7 @@
     justify-content: center;
     padding: 10.36302375793457px;
     box-sizing: border-box;
+    z-index: 3;
   }
   .button1,
   .button2,
@@ -118,6 +119,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     padding: 42.95616912841797px;
+    /* z-index: -1; */
   }
   .cover-child {
     top: 0;
@@ -146,7 +148,7 @@
   .left-icon4,
   .music-icon {
     position: absolute;
-    top: 39px;
+    /* top: 39px; */
   }
   .left-icon4 {
     left: 59px;
@@ -156,10 +158,12 @@
     justify-content: flex-start;
   }
   .music-icon {
-    left: 1667px;
-    width: 200px;
-    height: 200px;
+    top: 0px;
+    left: 950px;
+    width: 1200px;
+    height: 1045px;
     overflow: hidden;
+    z-index: 0.5;
   }
   .image-2-icon {
     position: absolute;
