--- a/team1/chessGame/frontend/assets/css/pieces.css
+++ b/team1/chessGame/frontend/assets/css/pieces.css
@@ -3,6 +3,20 @@
   font-weight: 900;
 }
 
+@keyframes shake {
+  0% { transform: translate(-50%, -50%) translate(0px, 0px) rotate(0deg); }
+  10% { transform: translate(-50%, -50%) translate(-1px, 0px) rotate(-1deg); }
+  20% { transform: translate(-50%, -50%) translate(1px, 0px) rotate(1deg); }
+  30% { transform: translate(-50%, -50%) translate(-1px, 0px) rotate(0deg); }
+  40% { transform: translate(-50%, -50%) translate(1px, 0px) rotate(-1deg); }
+  50% { transform: translate(-50%, -50%) translate(-1px, 0px) rotate(1deg); }
+  60% { transform: translate(-50%, -50%) translate(1px, 0px) rotate(0deg); }
+  70% { transform: translate(-50%, -50%) translate(-1px, 0px) rotate(-1deg); }
+  80% { transform: translate(-50%, -50%) translate(1px, 0px) rotate(1deg); }
+  90% { transform: translate(-50%, -50%) translate(-1px, 0px) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) translate(1px, 0px) rotate(-1deg); }
+}
+
 .pieces {
   position: absolute;
   font-size: 4.5rem;
@@ -10,6 +24,11 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 0.3rem 1.3rem; 
+}
+
+.pieces.pick {
+  animation: shake 3s; 
+  animation-iteration-count: infinite; 
 }
 
 .black-pieces {
