--- a/team1/chessGame/frontend/assets/css/board.css
+++ b/team1/chessGame/frontend/assets/css/board.css
@@ -52,6 +52,7 @@ ol, ul {
 .chessboard__block.valid-move {
     opacity: 0.5;
     transition: opacity 0.3s ease;
+    cursor: pointer;
 }
 
 .chessboard__block.valid-move::before {
