--- a/team1/chessGame/frontend/assets/css/board.css
+++ b/team1/chessGame/frontend/assets/css/board.css
@@ -27,9 +27,9 @@ ol, ul {
 }
 
 @keyframes blink {
-  0% { background-color: #F0D9B5; }
+  0% { background-color: #ffffff; }
   50% { background-color: rgb(243, 0, 0); }
-  100% { background-color: #B58863; }
+  100% { background-color: #ffffff; }
 }
 
 .chessboard {
