--- a/team1/chessGame/frontend/assets/css/board.css
+++ b/team1/chessGame/frontend/assets/css/board.css
@@ -170,3 +170,45 @@ ol, ul {
       font-size: 0.625rem;
     }
   }
+
+  .result {
+    position: absolute;
+    font-family: Roboto;
+    font-size: 6rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+    color: rgb(255, 0, 0);
+    z-index: 100;
+  }
+
+  .result::after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+}
+
+.again-button {
+    cursor: pointer;
+    position: absolute;
+    font-family: Roboto;
+    left: 50%;
+    top: 71%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+    z-index: 100;
+    padding: 1rem 2rem;
+    border-radius: 8%;
+    background-color: antiquewhite;
+}
+
+.again-button:hover {
+    background-color: rgb(255, 0, 0);
+    color: white;
+}
