--- a/chessGame/client/styles/board.css
+++ b/chessGame/client/styles/board.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     display: flex;
     align-items: center;
@@ -13,13 +7,13 @@ body {
 
 .chessBoard {
     display: grid;
-    grid-template-columns: repeat(8, 68.5px);
+    grid-template-columns: repeat(8, 72px);
     grid-template-rows: repeat(8, 72px);
 }
 
 .square {
-    width: 68.5px;
-    height: 72px;
+    width: var(--width-square);
+    height: var(--height-square);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,7 +31,7 @@ body {
     background-color: var(--highlight-square);
 }
 
-.piece{
+.piece {
     z-index: 2;
     user-select: none;
 }
@@ -46,7 +40,7 @@ body {
     color: #e8edf9;
     transform: translate(-280%, -120%);
 }
-*/ .blackNumber {
+.blackNumber {
     color: #b7c0d8;
     transform: translate(-280%, -120%);
 }
@@ -60,22 +54,34 @@ body {
     color: #b7c0d8;
     transform: translate(200%, 120%);
 }
-.point {
+.point,
+.bigPoint {
     position: absolute;
-    background-color: var(--primary);
-    margin: 0 auto;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--width-square);
+    height: var(--height-square);
     z-index: 1;
 }
-.bigPoint{
-    position: absolute;
-    background-color: var(--primary);
-    margin: 0 auto;
-    width: 52px;
-    height: 52px;
-    border-radius: 50%;
+.bigPoint {
     z-index: 3;
-    opacity: 0.4;
+    opacity: 0.5;
+}
+
+.point::before,
+.bigPoint::before {
+    margin: 0 auto;
+    content: "";
+    display: flex;
+    border-radius: 50%;
+    background-color: var(--primary);
+}
+.point::before {
+    width: 32px;
+    height: 32px;
+}
+.bigPoint::before {
+    width: 54px;
+    height: 54px;
 }
